end to end implementation
kafka, and go-git integration
clone repo from git
parse files after cloning and store findings
docker-compose
unit test
